src/components/styles/Landing.css
.landing-section{
width:100%;
max-width:var(--cMaxWidth);
margin:auto;
position:relative;
height:var(--vh);
overflow:hidden;
}

.landing-container{
width:var(--cWidth);
margin:auto;
height:100%;
position:relative;
max-width:var(--cMaxWidth);
}

/* BACKGROUND LIGHT */

.landing-circle1{
top:0;
left:0;
position:fixed;
width:300px;
height:300px;
background:#22d3ee;
filter:blur(70px);
border-radius:50%;
opacity:.3;
z-index:1;
}

.landing-circle2{
top:50%;
right:0;
position:fixed;
width:300px;
height:300px;
background:#22d3ee;
filter:blur(70px);
border-radius:50%;
opacity:.3;
z-index:1;
}

/* CHARACTER */

.character-model{
height:80vh;
position:absolute;
max-width:1920px;
transform:translateX(-50%);
width:100%;
left:50%;
bottom:40px;
z-index:0;
pointer-events:none;
}

.character-model canvas{
pointer-events:none;
}

/* CHARACTER LIGHT */

.character-model::before{
content:"";
position:absolute;
width:600px;
height:600px;
background:radial-gradient(circle,#52c7d9 0%,transparent 70%);
filter:blur(120px);
top:50%;
left:50%;
transform:translate(-50%,-40%);
z-index:-1;
opacity:.6;
animation:heroLight 6s ease-in-out infinite alternate;
}

@keyframes heroLight{

0%{
transform:translate(-50%,-40%) scale(1);
opacity:.4;
}

100%{
transform:translate(-50%,-40%) scale(1.2);
opacity:.7;
}

}

/* LEFT INTRO */

.landing-intro{
position:absolute;
z-index:100;
top:12%;
left:0;
}

.landing-intro h2{
margin:0;
color:#86d70c;
font-size:30px;
font-weight:300;
letter-spacing:2px;
}

.landing-intro h1{
margin:0;
letter-spacing:2px;
font-size:40px;
line-height:40px;
font-weight:600;
font-family:"Geist",sans-serif;
color:rgb(234,234,234);
}

/* RIGHT TEXT */

.landing-info{
position:absolute;
right:8%;
top:50%;
transform:translateY(-50%);
z-index:200;
display:flex;
flex-direction:column;
align-items:flex-start;
gap:10px;
max-width:500px;
}

/* SMALL TEXT */

.hero-small{
font-size:28px;
letter-spacing:2px;
font-weight:400;
color:#ff4d4d;
margin:0;
line-height:1.2;
}

/* MAIN TEXT */

.landing-info-h2{

font-size:60px;
font-weight:900;
color:#d9dee1;
letter-spacing:1px;
font-family:"Geist",sans-serif;

text-shadow:
0 0 5px #ebecec,
0 0 15px #14b8a6,
0 0 30px #0ea5a4;

animation:glowText 3s ease-in-out infinite alternate;

}

/* TEXT GLOW */

@keyframes glowText{

0%{
text-shadow:
0 0 5px #14b8a6,
0 0 15px #14b8a6,
0 0 25px #0ea5a4;
}

100%{
text-shadow:
0 0 10px #14b8a6,
0 0 25px #14b8a6,
0 0 45px #0ea5a4;
}

}

/* RESPONSIVE */

@media screen and (min-width:768px){

.landing-intro h1{
font-size:48px;
line-height:50px;
}

.hero-small{
font-size:30px;
}

}

@media screen and (min-width:1025px){

.character-model{
height:100vh;
bottom:0;
position:fixed;
}

.landing-intro{
top:50%;
right:66%;
transform:translateY(-50%);
}

.landing-info{
top:50%;
right:10%;
transform:translateY(-50%);
}

}

@media screen and (min-width:1600px){

.landing-intro h1{
font-size:60px;
}

.landing-info-h2{
font-size:70px;
}

.hero-small{
font-size:34px;
}

}

